# react-native-sprite-sheets

./: CONTRIBUTING.md  LICENSE  README.md  SpriteSheets.podspec  lefthook.yml  nitro.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/gradyn/rnsprite/: CachedBitmap.kt  MatrixScaleType.kt  NativeSprite.kt  NativeSpriteView.kt  NativeSpriteVitoFrameLayout.kt  RnspritePackage.kt  SpriteCache.kt  SpriteModule.kt  SpriteSheetsPackage.kt  SpriteView.kt  SpriteViewManager.kt
android/src/main/java/com/margelo/nitro/spritesheets/: SpriteSheets.kt  SpriteSheetsPackage.kt
android/src/main/java/com/spritesheets/: SpriteSheetsPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/SpriteSheetsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SpriteSheetsExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
example/src/components/: EmojiKeyboard.tsx
example/src/rnsprite/spritesheets/: README.txt  twemoji.png.json  useSpriteSheet.tsx
example/src/screens/: HomeScreen.tsx
example/src/spritesheets/: twemoji.png.json
ios/: SpriteSheets.swift
ios/src/: HybridSpriteView.swift
src/: NativeSprite.nitro.ts  SpriteCache.nitro.ts  SpriteSheets.nitro.ts  cmd.js  index.tsx  spritesheetMeta.ts  useSpriteSheet.tsx  useSpriteSheets.tsx
src/cli/: rnsprite.js
(+6 files in other folders)
